--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,115 @@
-.App {
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  border: 2px solid black;
+}
+
+#wrap {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 50px auto auto auto 50px;
+  border: 3px solid black;
+}
+
+#wrap h1 {
+  font-size: 35px;
+  color: #fff;
+  font-family: "Lobster", cursive;
+  padding-left: 20px;
+}
+
+#nav {
+  grid-column: 1 / 5;
+  background-color: #3f51b5;
+}
+
+#nav ul {
+  display: grid;
+  grid-template-columns: 30vw 40vw auto;
+  line-height: 45px;
+}
+#nav ul li:nth-child(2) {
+  grid-column: 2/2;
+}
+
+#search-box-one[type="search"] {
+  width: 40vw;
+  height: 40px;
+  font-size: 20px;
+  margin: 0 auto;
+  padding-left: 10px;
+  border: 2px solid #3f51b5;
+  border-radius: 10px;
+  display: none;
+}
+
+#section {
+  grid-column: 1 / 5;
+  grid-row: 2/ 5;
+  background-image: url("https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?cs=srgb&dl=antique-backdrop-background-733853.jpg&fm=jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #222;
+}
+
+#search-box-two[type="search"] {
+  width: 40vw;
+  height: 50px;
+  font-size: 20px;
+  padding-left: 10px;
+  border: 3px solid #7c5430;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#search-box-one::placeholder,
+#search-box-two::placeholder {
+  color: #999;
+}
+
+#footer {
+  grid-column: 1/5;
+  grid-row: 5/5;
+  background-color: #3f51b5;
+}
+
+.icons {
+  width: 25%;
+  float: left;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.icons:nth-child(1) {
+  margin: 0 0 0 25%;
 }
 
-.App-header {
-  background-color: brown;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.icons:nth-child(2) {
+  margin: 0 25% 0 0;
 }
 
-.App-link {
-  color: #61dafb;
+.icons a {
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons img {
+  width: 35px;
+  margin-top: 3px;
+  display: block;
+  filter: invert(100%);
+}
+
+.icons img:hover {
+  filter: invert(50%);
 }
