--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #222;
+  display: none;
 }
 
 #search-box-two[type="search"] {
