--- a/src/App.css
+++ b/src/App.css
@@ -8,54 +8,59 @@ html {
   box-sizing: inherit;
 }
 
-body {
-  border: 2px solid black;
-}
-
 #wrap {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 50px auto auto auto 50px;
-  border: 3px solid black;
+  width: 100%;
 }
 
 #wrap h1 {
   font-size: 35px;
   color: #fff;
   font-family: "Lobster", cursive;
-  padding-left: 20px;
 }
+/*=====================Header======================*/
 
 #nav {
-  grid-column: 1 / 5;
+  width: 100%;
+  height: 50px;
   background-color: #3f51b5;
+  float: left;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
 
-#nav ul {
-  display: grid;
-  grid-template-columns: 30vw 40vw auto;
-  line-height: 45px;
+#nav ul li {
+  float: left;
 }
+
+#nav ul li:nth-child(1) {
+  width: 20%;
+  text-align: center;
+  line-height: 50px;
+}
+
 #nav ul li:nth-child(2) {
-  grid-column: 2/2;
+  margin-right: 20%;
+  width: 60%;
 }
 
 #search-box-one[type="search"] {
-  width: 40vw;
+  width: 400px;
   height: 40px;
   font-size: 20px;
-  margin: 0 auto;
+  margin: 4px auto 0 auto;
   padding-left: 10px;
   border: 2px solid #3f51b5;
   border-radius: 10px;
-  display: none;
+  display: block;
 }
 
-#section {
-  grid-column: 1 / 5;
-  grid-row: 2/ 5;
+/*======================Fitst Search Page======================*/
+
+/* #first-search {
+  width: 100%;
+  height: 100vh;
   background-image: url("https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?cs=srgb&dl=antique-backdrop-background-733853.jpg&fm=jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -64,7 +69,7 @@ body {
 }
 
 #search-box-two[type="search"] {
-  width: 40vw;
+  width: 500px;
   height: 50px;
   font-size: 20px;
   padding-left: 10px;
@@ -78,12 +83,59 @@ body {
 #search-box-one::placeholder,
 #search-box-two::placeholder {
   color: #999;
+} */
+
+/*===================Gallery Page==================*/
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  width: 85%;
+  margin: auto;
 }
 
+.gallery-item {
+  flex: 1 0 11rem;
+  margin: auto;
+  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+}
+
+.gallery-img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 400ms ease-out;
+}
+
+.gallery-img:hover {
+  transform: scale(1.15);
+}
+
+@supports (display: grid) {
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
+    grid-gap: 1rem;
+    margin: 5.5rem auto;
+  }
+
+  .gallery-item {
+    margin: auto;
+  }
+}
+
+/*================Footer==============*/
+
 #footer {
-  grid-column: 1/5;
-  grid-row: 5/5;
+  width: 100%;
+  height: 50px;
+  float: left;
   background-color: #3f51b5;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 .icons {
