--- a/src/App.css
+++ b/src/App.css
@@ -73,55 +73,43 @@ html {
   background-image: url("https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?cs=srgb&dl=antique-backdrop-background-733853.jpg&fm=jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #222;
-  display: block;
+  background-color: #fff;
+  display: none;
 }
 
 .gallery {
-  display: block;
-  flex-wrap: wrap;
   width: 85%;
-  margin: auto;
+  flex-wrap: wrap;
+  flex-direction: column;
+  flex-flow: row wrap;
+  display: flex;
+  margin: 8% auto 17%;
 }
 
 .gallery-item {
-  flex: 1 0 11rem;
-  margin: auto;
-  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
-  overflow: hidden;
-  display: block;
+  flex: auto;
 }
 
 .gallery-img {
-  display: block;
-  width: 100%;
-  height: 100%;
+  width: 24%;
+  height: 20%;
+  margin: 0.5%;
+  border: 10px solid rgba(0, 0, 0, 0.9);
+  border-radius: 5%;
+  box-shadow: 0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.9);
   object-fit: cover;
   transition: transform 400ms ease-out;
 }
 
 .gallery-img:hover {
-  transform: scale(1.15);
-}
-
-@supports (display: grid) {
-  .gallery {
-    display: block;
-    grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
-    grid-gap: 1rem;
-    margin: 5.5rem auto;
-  }
-
-  .gallery-item {
-    margin: auto;
-  }
+  transform: scale(1.1);
 }
 
 /*================Footer==============*/
 
 #footer {
   width: 100%;
-  height: 50px;
+  height: 38px;
   float: left;
   background-color: #3f51b5;
   position: fixed;
@@ -148,8 +136,7 @@ html {
 }
 
 .icons img {
-  width: 35px;
-  margin-top: 3px;
+  width: 30px;
   display: block;
   filter: invert(100%);
 }
