--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ html {
 
 /*======================Search Section======================*/
 
-#search-box-top[name="searchData"] {
+.search-box-top[name="searchData"] {
   width: 400px;
   height: 40px;
   font-size: 20px;
@@ -48,7 +48,7 @@ html {
   transform: translate(-50%, -50%);
   z-index: 4;
 }
-#search-box-center[name="searchData"] {
+.search-box-center[name="searchData"] {
   width: 500px;
   height: 50px;
   font-size: 20px;
@@ -60,8 +60,8 @@ html {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-#search-box-center::placeholder,
-#search-box-top::placeholder {
+.search-box-center::placeholder,
+.search-box-top::placeholder {
   color: #999;
 }
 
@@ -74,7 +74,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #fff;
-  display: none;
+  display: block;
 }
 
 .gallery {
@@ -83,7 +83,8 @@ html {
   flex-direction: column;
   flex-flow: row wrap;
   display: flex;
-  margin: 8% auto 17%;
+  margin: 0 auto;
+  padding: 8% 0 8%;
 }
 
 .gallery-item {
@@ -91,18 +92,89 @@ html {
 }
 
 .gallery-img {
-  width: 24%;
-  height: 20%;
-  margin: 0.5%;
-  border: 10px solid rgba(0, 0, 0, 0.9);
+  width: 23%;
+  height: 250px;
+  margin: 1%;
+  border: 3px solid rgba(0, 0, 0, 0.7);
   border-radius: 5%;
-  box-shadow: 0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.9);
+  box-shadow: 0.3rem 0.3rem 0.3rem rgba(0, 0, 0, 0.6);
   object-fit: cover;
   transition: transform 400ms ease-out;
+  cursor: pointer;
 }
 
 .gallery-img:hover {
   transform: scale(1.1);
+}
+/* ==============Modal================ */
+.bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  display: flex;
+  z-index: 4;
+}
+.modal-box {
+  width: 80%;
+  height: 70%;
+  top: 50%;
+  background-color: #fff;
+}
+
+.modal-img {
+  display: block;
+  width: 50%;
+  height: 88%;
+  position: relative;
+  top: 6%;
+  left: 3%;
+  background-color: Red;
+  border: 4px solid rgba(0, 0, 0, 0.9);
+  border-radius: 10px;
+}
+
+.user-data {
+  float: right;
+  text-align: center;
+  position: relative;
+  top: -80%;
+  right: 3%;
+  width: 40%;
+  height: 86%;
+}
+
+.user-img {
+  display: block;
+  width: 120px;
+  height: 120px;
+  border: 4px solid rgba(0, 0, 0, 0.9);
+  border-radius: 50%;
+  margin: 20% auto 30px;
+}
+
+.user-data h1 {
+  font-family: Roboto;
+  font-size: 25px;
+  text-align: center;
+}
+.close {
+  color: #050505;
+  font-size: 50px;
+  font-weight: bold;
+  transition: 0.5s;
+  float: right;
+  margin-right: 10px;
+  transform: rotate(45deg);
+}
+.close:hover,
+.close:focus {
+  color: rgb(252, 5, 5);
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /*================Footer==============*/
