--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,21 @@ html {
   flex: auto;
 }
 
+.gallery-item h4 {
+  color: #fff;
+  text-align: center;
+  position: relative;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Shrikhand", cursive;
+  background-color: rgb(225, 225, 225);
+  background-clip: text;
+  color: transparent;
+  text-shadow: rgba(140, 103, 72, 0.9) 1px 3px 3px;
+  font-size: 60px;
+}
+
 .gallery-img {
   width: 23%;
   height: 250px;
@@ -165,7 +180,6 @@ html {
   position: relative;
   top: 6%;
   left: 3%;
-  background-color: Red;
   border: 3px solid rgba(0, 0, 0, 0.7);
   border-radius: 10px;
 }
@@ -182,11 +196,11 @@ html {
 
 .user-img {
   display: block;
-  width: 120px;
-  height: 120px;
-  border: 4px solid rgba(0, 0, 0, 0.9);
+  width: 150px;
+  height: 150px;
+  border: 4px solid rgba(0, 0, 0, 0.7);
   border-radius: 50%;
-  margin: 20% auto 30px;
+  margin: 30% auto 30px;
 }
 
 .user-data h1 {
@@ -194,6 +208,7 @@ html {
   font-size: 25px;
   text-align: center;
 }
+
 .close {
   color: #050505;
   font-size: 50px;
