--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,8 @@ html {
 #bg-img {
   width: 100%;
   height: 100vh;
-  background-image: url("https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?cs=srgb&dl=antique-backdrop-background-733853.jpg&fm=jpg");
+  /* background-image: url("https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?cs=srgb&dl=antique-backdrop-background-733853.jpg&fm=jpg"); */
+  background-image: url(./backgroundImage.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #fff;
